--- a/example_portfolio.html
+++ b/example_portfolio.html
@@ -7,7 +7,7 @@
   <!-- TODO: Erase one of these two. Replace the 'href' link below with a link to your WebGL build page. -->
   <ul>
     <li>
-      <a href="windows_build.zip" download
+      <a href="https://jonathanabele.itch.io/zelda-nes-remake"
         >The Legend of Zelda (Unity Remaster)</a
       >
 
