--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 
       <ul>
         Contributions
-        <li>Developed the basic player movement and sword mechanics</li>
+        <li>
+          Developed the basic player movement, sword mechanics, and boomerang
+          mechanics
+        </li>
         <li>
           Implemented stalfo, keese, goriya, bladetrap, and wallmaster enemies
         </li>
         <li>Created level design for the p1_gold level</li>
+      </ul>
+      Technology Used
+      <ul>
+        C#, Unity
       </ul>
     </li>
   </ul>
