--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
         C#, Unity
       </ul>
     </li>
+
+    <li>
+      <a href="https://jonathanabele.itch.io/deflection">Deflection</a>
+
+      <ul>
+        Contributions (solo project)
+        <li>
+          Developed movement and main shield mechanic that deflects cannoballs
+        </li>
+        <li>
+          Implemented cannons that shoot cannonballs with different actions such
+          as an oscilatory movement and a follow player movement. Also
+          Implemented bounce blocks for player to bounce cannonballs off of into
+          buttons.
+        </li>
+        <li>Brainstormed and created level designs</li>
+      </ul>
+      Technology Used
+      <ul>
+        C#, Unity
+      </ul>
+    </li>
   </ul>
 
   <!-- TIP: Rename this file "index.html", and it will become the default landing page whenever someone navigates their browser to your domain. -->
