--- a/index.html
+++ b/index.html
@@ -32,17 +32,12 @@
       <a href="https://jonathanabele.itch.io/deflection">Deflection</a>
 
       <ul>
-        Contributions (solo project)
         <li>
-          Developed movement and main shield mechanic that deflects cannoballs
+          Descripion : This is a single player 2D puzzle/action game that I made
+          by myself in two weeks. In the game, you use your shield to avoid
+          being hit by cannonballs to try and complete each level. You also must
+          use your shield stratigically to deflect cannonballs into buttons.
         </li>
-        <li>
-          Implemented cannons that shoot cannonballs with different actions such
-          as an oscilatory movement and a follow player movement. Also
-          Implemented bounce blocks for player to bounce cannonballs off of into
-          buttons.
-        </li>
-        <li>Brainstormed and created level designs</li>
       </ul>
       Technology Used
       <ul>
